sumo/tests/sumo/errors/network/edge/lane/testsuite.sumo
root__edge__lane#id__empty11
root__edge__lane#id__empty12
root__edge__lane#id__empty21
root__edge__lane#id__empty22
root__edge__lane#id__ungiven11
root__edge__lane#id__ungiven12
root__edge__lane#id__ungiven21
root__edge__lane#id__ungiven22
root__edge__lane#id__false11
root__edge__lane#id__false12
root__edge__lane#id__false21
root__edge__lane#id__false22

root__edge__lane#depart__empty11
root__edge__lane#depart__empty12
root__edge__lane#depart__empty21
root__edge__lane#depart__empty22
root__edge__lane#depart__ungiven11
root__edge__lane#depart__ungiven12
root__edge__lane#depart__ungiven21
root__edge__lane#depart__ungiven22
root__edge__lane#depart__false11
root__edge__lane#depart__false12
root__edge__lane#depart__false21
root__edge__lane#depart__false22

root__edge__lane#length__empty11
root__edge__lane#length__empty12
root__edge__lane#length__empty21
root__edge__lane#length__empty22
root__edge__lane#length__ungiven11
root__edge__lane#length__ungiven12
root__edge__lane#length__ungiven21
root__edge__lane#length__ungiven22
root__edge__lane#length__false11
root__edge__lane#length__false12
root__edge__lane#length__false21
root__edge__lane#length__false22

root__edge__lane#maxspeed__empty11
root__edge__lane#maxspeed__empty12
root__edge__lane#maxspeed__empty21
root__edge__lane#maxspeed__empty22
root__edge__lane#maxspeed__ungiven11
root__edge__lane#maxspeed__ungiven12
root__edge__lane#maxspeed__ungiven21
root__edge__lane#maxspeed__ungiven22
root__edge__lane#maxspeed__false11
root__edge__lane#maxspeed__false12
root__edge__lane#maxspeed__false21
root__edge__lane#maxspeed__false22

root__edge__lane__empty11
root__edge__lane__empty12
root__edge__lane__empty21
root__edge__lane__empty22
root__edge__lane__false11a
root__edge__lane__false12a
root__edge__lane__false21a
root__edge__lane__false22a
root__edge__lane__false11b
root__edge__lane__false12b
root__edge__lane__false21b
root__edge__lane__false22b
root__edge__lane__false11c
root__edge__lane__false12c
root__edge__lane__false21c
root__edge__lane__false22c
root__edge__lane__false11d
root__edge__lane__false12d
root__edge__lane__false21d
root__edge__lane__false22d
root__edge__lane__false11e
root__edge__lane__false12e
root__edge__lane__false21e
root__edge__lane__false22e













